test/functions/deitz/named/test_named3-error.good
Error: Unresolved call 'foo(i=1, m=2, n=3)' (test_named3-error.chpl:23)
Candidates are:
  foo(i: int, j: int, k: int) (test_named3-error.chpl:1)
  foo(l: int, m: int, n: int) (test_named3-error.chpl:5)
